--- a/categoryroll.astro
+++ b/categoryroll.astro
@@ -29,7 +29,7 @@ const { categories } = Astro.props
               </div>
               <h3
                 itemprop='name'
-                class='bg-rosely9 hover:bg-rosely-c inline-block rounded-sm px-3 py-1 text-xs font-medium tracking-tight text-white uppercase'
+                class='bg-rosely9 hover:bg-roselyc inline-block rounded-sm px-3 py-1 text-xs font-medium tracking-tight text-white uppercase'
               >
                 {category.data.title}
               </h3>
