--- a/pagecontent.astro
+++ b/pagecontent.astro
@@ -21,7 +21,7 @@ const title = frontmatter.title
   <section class='mb-9 space-y-1'>
     <p
       itemprop='articleSection'
-      class='font-display text-rosely9 dark:text-rosely-b text-sm font-medium'
+      class='font-display text-rosely9 dark:text-roselyb text-sm font-medium'
     >
       {frontmatter.section}
     </p>
