--- a/search.astro
+++ b/search.astro
@@ -36,7 +36,7 @@ import { Icon } from 'astro-icon/components'
           document.querySelectorAll('#lunrsearchresults ul')[0].innerHTML =
             document.querySelectorAll('#lunrsearchresults ul')[0]
               .innerHTML +
-            '<li class="-m-3 p-3 flex items-start rounded-lg hover:bg-rosely-b dark:hover:bg-rosely9"><a href="' +
+            '<li class="-m-3 p-3 flex items-start rounded-lg hover:bg-roselyb dark:hover:bg-rosely9"><a href="' +
             url +
             '"><p class="text-base font-medium text-rosely0 dark:text-white">' +
             doc.title +
@@ -61,7 +61,7 @@ import { Icon } from 'astro-icon/components'
         <input
           type='search'
           x-model='searchText'
-          class='form-control border-rosely-b bg-rosely7 text-rosely1 focus:border-rosely5 focus:text-rosely0 dark:border-rosely9 dark:bg-rosely1 dark:text-rosely3 dark:focus:border-rosely4 relative m-0 block w-full max-w-xs min-w-0 flex-auto rounded-sm border border-solid bg-clip-padding px-3 py-1.5 text-base font-normal transition ease-in-out focus:outline-hidden dark:focus:text-white'
+          class='form-control border-roselyb bg-rosely7 text-rosely1 focus:border-rosely5 focus:text-rosely0 dark:border-rosely9 dark:bg-rosely1 dark:text-rosely3 dark:focus:border-rosely4 relative m-0 block w-full max-w-xs min-w-0 flex-auto rounded-sm border border-solid bg-clip-padding px-3 py-1.5 text-base font-normal transition ease-in-out focus:outline-hidden dark:focus:text-white'
           id='lunrsearch'
           name='q'
           maxlength='255'
@@ -71,7 +71,7 @@ import { Icon } from 'astro-icon/components'
           aria-describedby='lunrbutton'
         />
         <button
-          class='btn bg-rosely9 hover:bg-rosely-c focus:bg-rosely8 active:bg-rosely8 inline-block items-center rounded-sm px-2 py-2 text-xs leading-tight font-medium text-white uppercase shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:ring-0 focus:shadow-lg focus:outline-hidden active:shadow-lg'
+          class='btn bg-rosely9 hover:bg-roselyc focus:bg-rosely8 active:bg-rosely8 inline-block items-center rounded-sm px-2 py-2 text-xs leading-tight font-medium text-white uppercase shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:ring-0 focus:shadow-lg focus:outline-hidden active:shadow-lg'
           type='button'
           name='search'
           id='lunrbutton'
@@ -142,7 +142,7 @@ import { Icon } from 'astro-icon/components'
             >
               <button
                 type='button'
-                class='text-rosely-b hover:text-rosely5 rounded-md focus:ring-2 focus:ring-white focus:outline-hidden'
+                class='text-roselyb hover:text-rosely5 rounded-md focus:ring-2 focus:ring-white focus:outline-hidden'
                 x-on:click='searchResults = false'
               >
                 <span class='sr-only'>Close panel</span>
