--- a/theme.astro
+++ b/theme.astro
@@ -6,7 +6,7 @@ import { Icon } from 'astro-icon/components'
   <div>
     <button
       type='button'
-      class='border-rosely-a bg-rosely7 text-rosely0 hover:bg-rosely-b focus:ring-rosely-c focus:ring-offset-rosely-b dark:border-rosely9 dark:bg-rosely1 dark:text-rosely3 dark:hover:bg-rosely8 dark:focus:ring-offset-rosely9 inline-flex w-full justify-center rounded-md border px-4 py-2 text-sm font-medium shadow-xs focus:ring-2 focus:ring-offset-2 focus:outline-hidden'
+      class='border-roselya bg-rosely7 text-rosely0 hover:bg-roselyb focus:ring-roselyc focus:ring-offset-roselyb dark:border-rosely9 dark:bg-rosely1 dark:text-rosely3 dark:hover:bg-rosely8 dark:focus:ring-offset-rosely9 inline-flex w-full justify-center rounded-md border px-4 py-2 text-sm font-medium shadow-xs focus:ring-2 focus:ring-offset-2 focus:outline-hidden'
       id='menu-button'
       aria-expanded='true'
       aria-haspopup='true'
@@ -32,7 +32,7 @@ import { Icon } from 'astro-icon/components'
     aria-activedescendant='listbox-option-3'
   >
     <li
-      class='text-rosely0 hover:bg-rosely9 dark:bg-rosely1 dark:hover:bg-rosely-b dark:hover:text-rosely0 relative cursor-default py-2 pr-4 pl-2 select-none hover:text-white dark:text-white'
+      class='text-rosely0 hover:bg-rosely9 dark:bg-rosely1 dark:hover:bg-roselyb dark:hover:text-rosely0 relative cursor-default py-2 pr-4 pl-2 select-none hover:text-white dark:text-white'
       id='listbox-option-0'
       role='option'
       x-on:click="localStorage.removeItem('theme'); window.location.reload()"
@@ -54,7 +54,7 @@ import { Icon } from 'astro-icon/components'
       </span>
     </li>
     <li
-      class='text-rosely0 hover:bg-rosely9 dark:bg-rosely1 dark:hover:bg-rosely-b dark:hover:text-rosely0 relative cursor-default py-2 pr-4 pl-2 select-none hover:text-white dark:text-white'
+      class='text-rosely0 hover:bg-rosely9 dark:bg-rosely1 dark:hover:bg-roselyb dark:hover:text-rosely0 relative cursor-default py-2 pr-4 pl-2 select-none hover:text-white dark:text-white'
       id='listbox-option-0'
       role='option'
       x-on:click="localStorage.theme = 'light'; window.location.reload()"
@@ -75,7 +75,7 @@ import { Icon } from 'astro-icon/components'
       </span>
     </li>
     <li
-      class='text-rosely0 hover:bg-rosely9 dark:bg-rosely1 dark:hover:bg-rosely-b dark:hover:text-rosely0 relative cursor-default py-2 pr-4 pl-2 select-none hover:text-white dark:text-white'
+      class='text-rosely0 hover:bg-rosely9 dark:bg-rosely1 dark:hover:bg-roselyb dark:hover:text-rosely0 relative cursor-default py-2 pr-4 pl-2 select-none hover:text-white dark:text-white'
       id='listbox-option-0'
       role='option'
       x-on:click="localStorage.theme = 'dark'; window.location.reload()"
