--- a/webroll.astro
+++ b/webroll.astro
@@ -30,7 +30,7 @@ const websites = await getCollection('website', (website) => !featured || websit
             </div>
             <h3
               itemprop='name'
-              class='bg-rosely9 hover:bg-rosely-c inline-block rounded-sm px-3 py-1 text-xs font-medium tracking-tight text-white uppercase'
+              class='bg-rosely9 hover:bg-roselyc inline-block rounded-sm px-3 py-1 text-xs font-medium tracking-tight text-white uppercase'
             >
               {site.data.title}
             </h3>
