--- a/categories.astro
+++ b/categories.astro
@@ -18,7 +18,7 @@ const cats = await Promise.all(
         <a
           itemprop='articleSection'
           href={`${import.meta.env.BASE_URL}category/${encodeURIComponent(category!.id)}/`}
-          class='bg-rosely9 hover:bg-rosely-c inline-block rounded-sm px-3 py-1 text-xs font-medium tracking-tight text-white uppercase'
+          class='bg-rosely9 hover:bg-roselyc inline-block rounded-sm px-3 py-1 text-xs font-medium tracking-tight text-white uppercase'
         >
           {category!.data.title}
           <span class='sr-only'>category</span>
