--- a/footer.astro
+++ b/footer.astro
@@ -9,7 +9,7 @@ const social = await getCollection('social')
 <div class='h-24 lg:h-16'></div>
 <footer class='text-rosely1 dark:text-rosely7'>
   <div
-    class='border-rosely-b bg-rosely6 dark:bg-rosely8 fixed inset-x-0 bottom-0 z-20 flex w-full flex-col items-center border-t-2 px-4 py-1 lg:flex-row lg:px-8 lg:py-4'
+    class='border-roselyb bg-rosely6 dark:bg-rosely8 fixed inset-x-0 bottom-0 z-20 flex w-full flex-col items-center border-t-2 px-4 py-1 lg:flex-row lg:px-8 lg:py-4'
   >
     <span class='flex flex-none flex-row items-center'>
       <a
@@ -19,11 +19,11 @@ const social = await getCollection('social')
         <img src={Logo.src} alt='Footer Logo' class='dark:bg-rosely3 h-6 w-6' loading='lazy' />
         <span class='sr-only'>Logo</span>
       </a>
-      <p class='border-rosely-b ml-2 border-l-2 py-1 pl-2 text-sm'>
+      <p class='border-roselyb ml-2 border-l-2 py-1 pl-2 text-sm'>
         © {new Date().getFullYear()} MIT licence
         <a
           href='https://hellotham.com'
-          class='text-rosely9 hover:text-rosely-c dark:text-rosely-b dark:hover:text-rosely5 ml-1'
+          class='text-rosely9 hover:text-roselyc dark:text-roselyb dark:hover:text-rosely5 ml-1'
           rel='noopener noreferrer'
           target='_blank'
         >
@@ -32,28 +32,28 @@ const social = await getCollection('social')
       </p>
     </span>
     <span class='flex flex-none flex-row items-center'>
-      <p class='lg:border-rosely-b text-sm lg:ml-4 lg:border-l-2 lg:py-1 lg:pl-4'>
+      <p class='lg:border-roselyb text-sm lg:ml-4 lg:border-l-2 lg:py-1 lg:pl-4'>
         <a
           href={import.meta.env.BASE_URL + 'privacy'}
-          class='text-rosely9 hover:text-rosely-c dark:text-rosely-b dark:hover:text-rosely5 ml-1'
+          class='text-rosely9 hover:text-roselyc dark:text-roselyb dark:hover:text-rosely5 ml-1'
         >
           Privacy Policy
         </a>
       </p>
-      <p class='border-rosely-b ml-4 border-l-2 py-1 pl-4 text-sm'>
+      <p class='border-roselyb ml-4 border-l-2 py-1 pl-4 text-sm'>
         <a
           href={import.meta.env.BASE_URL + 'rss.xml'}
-          class='text-rosely9 hover:text-rosely-c dark:text-rosely-b dark:hover:text-rosely5 ml-1'
+          class='text-rosely9 hover:text-roselyc dark:text-roselyb dark:hover:text-rosely5 ml-1'
           rel='noopener noreferrer'
           target='_blank'
         >
           RSS
         </a>
       </p>
-      <p class='border-rosely-b ml-4 border-l-2 py-1 pl-4 text-sm'>
+      <p class='border-roselyb ml-4 border-l-2 py-1 pl-4 text-sm'>
         <a
           href={import.meta.env.BASE_URL + 'sitemap-index.xml'}
-          class='text-rosely9 hover:text-rosely-c dark:text-rosely-b dark:hover:text-rosely5 ml-1'
+          class='text-rosely9 hover:text-roselyc dark:text-roselyb dark:hover:text-rosely5 ml-1'
           rel='noopener noreferrer'
           target='_blank'
         >
@@ -66,7 +66,7 @@ const social = await getCollection('social')
         social.map((s) => (
           <a
             href={s.data.link}
-            class='text-rosely9 hover:text-rosely-c dark:text-rosely-b dark:hover:text-rosely5 ml-3'
+            class='text-rosely9 hover:text-roselyc dark:text-roselyb dark:hover:text-rosely5 ml-3'
             rel='noopener noreferrer'
             target='_blank'
           >
