--- a/header.astro
+++ b/header.astro
@@ -8,7 +8,7 @@ import Theme from './theme.astro'
 <div class='relative h-16 w-full'>
   <nav x-data='{ isOpen: false }' class='bg-rosely6 dark:bg-rosely8'>
     <div
-      class='border-rosely-b bg-rosely6 dark:bg-rosely8 fixed z-50 mx-auto w-full border-b-2 px-2 sm:px-6 lg:px-8'
+      class='border-roselyb bg-rosely6 dark:bg-rosely8 fixed z-50 mx-auto w-full border-b-2 px-2 sm:px-6 lg:px-8'
     >
       <div class='relative flex h-16 items-center justify-between'>
         <div class='absolute inset-y-0 left-0 flex items-center lg:hidden'>
@@ -16,7 +16,7 @@ import Theme from './theme.astro'
           <button
             type='button'
             x-on:click='isOpen = !isOpen'
-            class='text-rosely9 hover:bg-rosely-b hover:text-rosely-c focus:ring-rosely-b dark:text-rosely-b dark:hover:bg-rosely9 dark:hover:text-rosely7 dark:focus:ring-rosely-b inline-flex items-center justify-center rounded-md p-2 focus:ring-2 focus:outline-hidden focus:ring-inset'
+            class='text-rosely9 hover:bg-roselyb hover:text-roselyc focus:ring-roselyb dark:text-roselyb dark:hover:bg-rosely9 dark:hover:text-rosely7 dark:focus:ring-roselyb inline-flex items-center justify-center rounded-md p-2 focus:ring-2 focus:outline-hidden focus:ring-inset'
             aria-controls='mobile-menu'
             aria-expanded='false'
           >
@@ -47,8 +47,8 @@ import Theme from './theme.astro'
                     href={import.meta.env.BASE_URL + item.href}
                     class={
                       (item.href.length > 0 && Astro.url.toString().includes(item.href)
-                        ? 'bg-rosely5 text-rosely-c dark:bg-rosely-c dark:text-white'
-                        : 'text-rosely8 hover:bg-rosely-b hover:text-rosely-c dark:text-rosely7 dark:hover:bg-rosely9 dark:hover:text-white') +
+                        ? 'bg-rosely5 text-roselyc dark:bg-roselyc dark:text-white'
+                        : 'text-rosely8 hover:bg-roselyb hover:text-roselyc dark:text-rosely7 dark:hover:bg-rosely9 dark:hover:text-white') +
                       ' rounded-md px-2 py-2 text-lg font-medium'
                     }
                     aria-current={
@@ -97,8 +97,8 @@ import Theme from './theme.astro'
               href={import.meta.env.BASE_URL + item.href}
               class:list={[
                 item.href.length > 0 && Astro.url.toString().includes(item.href)
-                  ? 'bg-rosely5 text-rosely-c dark:bg-rosely-c dark:text-white'
-                  : 'text-rosely8 hover:bg-rosely-b hover:text-rosely-c dark:text-rosely7 dark:hover:bg-rosely9 dark:hover:text-white',
+                  ? 'bg-rosely5 text-roselyc dark:bg-roselyc dark:text-white'
+                  : 'text-rosely8 hover:bg-roselyb hover:text-roselyc dark:text-rosely7 dark:hover:bg-rosely9 dark:hover:text-white',
                 'rounded-sm px-2'
               ]}
               aria-current={
