--- a/leftsidebar.astro
+++ b/leftsidebar.astro
@@ -22,7 +22,7 @@ const currentPageMatch = currentPage.slice(1)
               <h2 class='font-display text-rosely8 dark:text-rosely3 font-medium'>{header}</h2>
               <ul
                 role='list'
-                class='border-rosely-b dark:border-rosely-a lg:border-rosely-a mt-2 space-y-1 border-l-2 lg:mt-4 lg:space-y-2'
+                class='border-roselyb dark:border-roselya lg:border-roselya mt-2 space-y-1 border-l-2 lg:mt-4 lg:space-y-2'
               >
                 {children.map((child) => {
                   const url = import.meta.env.BASE_URL + child.link
@@ -33,8 +33,8 @@ const currentPageMatch = currentPage.slice(1)
                         aria-current={currentPageMatch.search(child.link) >= 0 ? 'page' : false}
                         class={
                           currentPageMatch.search(child.link) >= 0
-                            ? 'text-rosely-c before:bg-rosely-c dark:text-rosely7 dark:before:bg-rosely6 block w-full pl-3.5 font-semibold before:pointer-events-none before:absolute before:top-1/2 before:-left-1 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full'
-                            : 'text-rosely9 before:bg-rosely9 hover:text-rosely-c dark:text-rosely-b dark:before:bg-rosely6 dark:hover:text-rosely6 block w-full pl-3.5 before:pointer-events-none before:absolute before:top-1/2 before:-left-1 before:hidden before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full hover:before:block'
+                            ? 'text-roselyc before:bg-roselyc dark:text-rosely7 dark:before:bg-rosely6 block w-full pl-3.5 font-semibold before:pointer-events-none before:absolute before:top-1/2 before:-left-1 before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full'
+                            : 'text-rosely9 before:bg-rosely9 hover:text-roselyc dark:text-roselyb dark:before:bg-rosely6 dark:hover:text-rosely6 block w-full pl-3.5 before:pointer-events-none before:absolute before:top-1/2 before:-left-1 before:hidden before:h-1.5 before:w-1.5 before:-translate-y-1/2 before:rounded-full hover:before:block'
                         }
                       >
                         {child.text}
