--- a/nextprev.astro
+++ b/nextprev.astro
@@ -10,14 +10,14 @@ export interface Props {
 const { base, prev, next } = Astro.props
 ---
 
-<dl class='border-rosely-a dark:border-rosely8 mt-12 flex border-t pt-6'>
+<dl class='border-roselya dark:border-rosely8 mt-12 flex border-t pt-6'>
   {
     prev && (
-      <div class='mr-auto text-left'>
+      <div class='ms-2 mr-auto text-left'>
         <dt class='font-display text-rosely1 dark:text-rosely3 text-sm font-medium'>Prev</dt>
         <dd class='mt-1'>
           <a
-            class='text-rosely9 hover:text-rosely-c dark:text-rosely-b dark:hover:text-rosely5 text-base font-semibold'
+            class='text-rosely9 hover:text-roselyc dark:text-roselyb dark:hover:text-rosely5 text-base font-semibold'
             href={base + prev.id}
           >
             <span aria-hidden='true'>←</span>
@@ -29,11 +29,11 @@ const { base, prev, next } = Astro.props
   }
   {
     next && (
-      <div class='ml-auto text-right'>
+      <div class='ml-auto text-right' me-4>
         <dt class='font-display text-rosely1 dark:text-rosely3 text-sm font-medium'>Next</dt>
         <dd class='mt-1'>
           <a
-            class='text-rosely9 hover:text-rosely-c dark:text-rosely-b dark:hover:text-rosely5 text-base font-semibold'
+            class='text-rosely9 hover:text-roselyc dark:text-roselyb dark:hover:text-rosely5 text-base font-semibold'
             href={base + next.id}
           >
             {next.data.title}
