--- a/tableofcontents.astro
+++ b/tableofcontents.astro
@@ -22,11 +22,11 @@ const { headings } = Astro.props as Props
         <li
           class={
             heading.depth == 2
-              ? 'text-rosely9 dark:text-rosely-b'
-              : 'text-rosely9 dark:text-rosely-b mt-2 py-1 pl-5'
+              ? 'text-rosely9 dark:text-roselyb'
+              : 'text-rosely9 dark:text-roselyb mt-2 py-1 pl-5'
           }
         >
-          <a class='hover:text-rosely-c dark:hover:text-rosely5' href={`#${heading.slug}`}>
+          <a class='hover:text-roselyc dark:hover:text-rosely5' href={`#${heading.slug}`}>
             {heading.text}
           </a>
         </li>
