--- a/search.astro
+++ b/search.astro
@@ -71,7 +71,7 @@ import { Icon } from 'astro-icon/components'
           aria-describedby='lunrbutton'
         />
         <button
-          class='btn bg-rosely9 hover:bg-roselyc focus:bg-rosely8 active:bg-rosely8 inline-block items-center rounded-sm px-2 py-2 text-xs leading-tight font-medium text-white uppercase shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:ring-0 focus:shadow-lg focus:outline-hidden active:shadow-lg'
+          class='btn bg-rosely9 hover:bg-roselyc focus:bg-rosely8 active:bg-rosely8 inline-block items-center rounded-sm px-2 py-2 text-xs leading-tight font-medium text-white uppercase shadow-md transition duration-150 ease-in-out hover:shadow-lg focus:shadow-lg focus:ring-0 focus:outline-hidden active:shadow-lg'
           type='button'
           name='search'
           id='lunrbutton'
@@ -165,7 +165,7 @@ import { Icon } from 'astro-icon/components'
               <div id='lunrsearchmodal' class='relative mt-6 flex-1 px-4 sm:px-6'>
                 <div
                   id='lunrsearchresults'
-                  class='ring-rosely0 ring-opacity-5 overflow-hidden rounded-lg ring-1 shadow-lg'
+                  class='ring-rosely0 ring-opacity-5 overflow-hidden rounded-lg shadow-lg ring-1'
                 >
                   <ul></ul>
                 </div>
