--- a/categoryroll.astro
+++ b/categoryroll.astro
@@ -13,7 +13,7 @@ const { categories } = Astro.props
   itemtype='https://schema.org/CollectionPage'
   class='mx-auto max-w-none p-4 sm:px-6 lg:px-8'
 >
-  <div class='grid grid-cols-2 gap-x-6 space-y-0 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6'>
+  <div class='grid grid-cols-2 space-y-0 gap-x-6 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6'>
     {
       categories
         .filter((cat) => cat.id != 'website')
