--- a/theme.astro
+++ b/theme.astro
@@ -25,7 +25,7 @@ import { Icon } from 'astro-icon/components'
     x-transition:leave='transition ease-in duration-75'
     x-transition:leave-start='transform opacity-100 scale-100'
     x-transition:leave-end='transform opacity-0 scale-95'
-    class='bg-rosely7 ring-opacity-5 dark:bg-rosely1 absolute z-20 mt-1 max-h-56 w-full overflow-auto rounded-md py-1 text-base ring-1 shadow-lg ring-black focus:outline-hidden sm:text-sm'
+    class='bg-rosely7 ring-opacity-5 dark:bg-rosely1 absolute z-20 mt-1 max-h-56 w-full overflow-auto rounded-md py-1 text-base shadow-lg ring-1 ring-black focus:outline-hidden sm:text-sm'
     tabindex='-1'
     role='listbox'
     aria-labelledby='listbox-label'
