--- a/years.astro
+++ b/years.astro
@@ -7,36 +7,37 @@ export interface Props {
 const { year, years } = Astro.props
 ---
 
-<div class='container mt-4 flex flex-col'>
-  <div class='mb-2 flex flex-row pb-2 md:pb-0'>
-    <a
-      href={import.meta.env.BASE_URL + 'categories'}
-      class='bg-rosely9 hover:bg-roselyc inline-block rounded-md px-2 py-1 text-base text-white md:text-lg'
-    >
-      Categories
-    </a>
-    <a
-      href={import.meta.env.BASE_URL + 'tags'}
-      class='bg-rosely9 hover:bg-roselyc ml-4 inline-block rounded-md px-2 py-1 text-base text-white md:text-lg'
-    >
-      Tags
-    </a>
+<>
+  <div class='container mx-auto mt-4 flex flex-col items-center md:flex-row'>
+    <div class='flex flex-row pb-2 md:pb-0'>
+      <a
+        href={import.meta.env.BASE_URL + 'categories'}
+        class='bg-rosely9 hover:bg-roselyc inline-block rounded-md px-2 py-1 text-base text-white md:text-lg'
+      >
+        Categories
+      </a>
+      <a
+        href={import.meta.env.BASE_URL + 'tags'}
+        class='bg-rosely9 hover:bg-roselyc ml-4 inline-block rounded-md px-2 py-1 text-base text-white md:text-lg'
+      >
+        Tags
+      </a>
+    </div>
   </div>
-  <ul class='isolate mt-2 flex flex-wrap gap-2 rounded-md shadow-xs'>
+  <div class='isolate mt-2 inline-flex flex-wrap gap-2 rounded-md shadow-xs'>
     {
       years.map((y) => (
-        <li>
-          <a
-            href={import.meta.env.BASE_URL + 'blog/' + y}
-            class:list={[
-              'ring-roselya hover:bg-roselya relative items-center rounded-md px-2 py-2 font-mono text-sm ring-1 ring-inset focus:z-20 focus:outline-offset-0',
-              y === year ? 'bg-rosely4 text-rosely3 z-10' : 'bg-rosely6 text-rosely0'
-            ]}
-          >
-            {y}
-          </a>
-        </li>
+        <a
+          href={import.meta.env.BASE_URL + 'blog/' + y}
+          aria-current={year === y && 'page'}
+          class:list={[
+            'hover:bg-roselya ring-roselya relative inline-flex items-center rounded-md px-4 py-2 font-mono text-sm font-semibold ring-1 ring-inset focus:z-20 focus:outline-offset-0',
+            year === y ? 'bg-rosely4 z-10' : 'bg-rosely5 text-rosely0'
+          ]}
+        >
+          {y}
+        </a>
       ))
     }
-  </ul>
-</div>
+  </div>
+</>
