--- a/years.astro
+++ b/years.astro
@@ -28,7 +28,7 @@ const { year, years } = Astro.props
     {
       years.map((y) => (
         <a
-          href={import.meta.env.BASE_URL + 'blog/' + y}
+          href={import.meta.env.BASE_URL + y}
           aria-current={year === y && 'page'}
           class:list={[
             'hover:bg-roselya ring-roselya relative inline-flex items-center rounded-md px-4 py-2 font-mono text-sm font-semibold ring-1 ring-inset focus:z-20 focus:outline-offset-0',
