--- a/header.astro
+++ b/header.astro
@@ -44,7 +44,7 @@ import Theme from './theme.astro'
               {
                 NavigationLinks.map((item) => (
                   <a
-                    href={import.meta.env.BASE_URL + item.href}
+                    href={'/' + item.href}
                     class={
                       (item.href.length > 0 && Astro.url.toString().includes(item.href)
                         ? 'bg-rosely5 text-roselyc dark:bg-roselyc dark:text-white'
@@ -94,7 +94,7 @@ import Theme from './theme.astro'
         {
           NavigationLinks.map((item) => (
             <a
-              href={import.meta.env.BASE_URL + item.href}
+              href={'/' + item.href}
               class:list={[
                 item.href.length > 0 && Astro.url.toString().includes(item.href)
                   ? 'bg-rosely5 text-roselyc dark:bg-roselyc dark:text-white'
