--- a/paginatecontrol.astro
+++ b/paginatecontrol.astro
@@ -15,13 +15,13 @@ const { base, page } = Astro.props
 <div class='container mx-auto mt-4 flex flex-col items-center md:flex-row'>
   <div class='flex flex-row pb-2 md:pb-0'>
     <a
-      href={import.meta.env.BASE_URL + 'categories'}
+      href='/categories'
       class='bg-rosely9 hover:bg-roselyc inline-block rounded-md px-2 py-1 text-base text-white md:text-lg'
     >
       Categories
     </a>
     <a
-      href={import.meta.env.BASE_URL + 'tags'}
+      href='/tags'
       class='bg-rosely9 hover:bg-roselyc ml-4 inline-block rounded-md px-2 py-1 text-base text-white md:text-lg'
     >
       Tags
@@ -49,17 +49,17 @@ const { base, page } = Astro.props
           {Array.from({ length: page.lastPage }, (_, index) => index + 1).map(
             (i) =>
               ((page.lastPage < 10 ||
-              [
-                1,
-                2,
-                3,
-                page.currentPage - 1,
-                page.currentPage,
-                page.currentPage + 1,
-                page.lastPage - 2,
-                page.lastPage - 1,
-                page.lastPage
-              ].includes(i)) && (
+                [
+                  1,
+                  2,
+                  3,
+                  page.currentPage - 1,
+                  page.currentPage,
+                  page.currentPage + 1,
+                  page.lastPage - 2,
+                  page.lastPage - 1,
+                  page.lastPage
+                ].includes(i)) && (
                 <a
                   href={base + '/' + (i > 1 ? i : '')}
                   aria-current='page'
