--- a/tags.astro
+++ b/tags.astro
@@ -11,7 +11,7 @@ const { tags } = Astro.props
     <div class='mt-2 flex flex-row flex-wrap items-start gap-4 lg:gap-2'>
       {tags.map((tag) => (
         <a
-          href={`${import.meta.env.BASE_URL}tag/${encodeURIComponent(tag)}/`}
+          href={`/tag/${encodeURIComponent(tag)}/`}
           class='bg-rosely7 text-rosely9 hover:bg-roselyb hover:text-roselyc dark:bg-rosely1 dark:text-roselyb dark:hover:bg-rosely8 dark:hover:text-rosely7 inline-block rounded-sm px-2 py-2 text-xs font-semibold lg:py-1'
         >
           #{tag}
