--- a/base.astro
+++ b/base.astro
@@ -22,16 +22,18 @@ import './global.css'
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width' />
-    <link rel='icon' href={`${Astro.site}favicon.ico`} sizes='any' />
-    <link rel='icon' href={`${Astro.site}favicon.svg`} type='image/svg+xml' />
-    <link rel='apple-touch-icon' href={`${Astro.site}apple-touchicon.png`} />
-    <link rel='manifest' href={`${Astro.site}site.webmanifest`} />
-    <link rel='sitemap' href={`${Astro.site}sitemap-indexxml`} />
+    <link rel='icon' href='/favicon.ico' sizes='any' />
+    <link rel='icon' href='/favicon.svg' type='image/svg+xml' />
+    <link rel='apple-touch-icon' href='/apple-touchicon.png' />
+    <link rel='manifest' href='/site.webmanifest' />
+    <link rel='sitemap' href='/sitemap-index.xml' />
     <link
-      rel='alternate'
+      rel='
+      alternate'
       type='application/rss+xml'
       title={SiteMetadata.title}
-      href={`${Astro.site}rss.xml`}
+      href='/rss.xml'
+      }
     />
     <meta name='generator' content={Astro.generator} />
     <SEO frontmatter={frontmatter} />
