--- a/gallery.astro
+++ b/gallery.astro
@@ -8,7 +8,7 @@ export interface Props {
 
 const { folder } = Astro.props
 
-const imageFiles = import.meta.glob<ImageMetadata>('../images/gallery/**/*.{png,webp,jpg,jpeg}', {
+const imageFiles = import.meta.glob<ImageMetadata>('../gallery/**/*.{png,webp,jpg,jpeg}', {
   import: 'default',
   eager: true
 })
