--- a/nextprev.astro
+++ b/nextprev.astro
@@ -29,7 +29,7 @@ const { base, prev, next } = Astro.props
   }
   {
     next && (
-      <div class='ml-auto text-right' me-4>
+      <div class='me-4 ml-auto text-right'>
         <dt class='font-display text-rosely1 dark:text-rosely3 text-sm font-medium'>Next</dt>
         <dd class='mt-1'>
           <a
