--- a/blog.astro
+++ b/blog.astro
@@ -28,7 +28,7 @@ const { post, prev, next } = Astro.props
       </section>
     </article>
   </main>
-  <NextPrev slot='before-footer' base={'import.meta.env.BASE_URL'} prev={prev} next={next} />
+  <NextPrev slot='before-footer' base={import.meta.env.BASE_URL + '/'} prev={prev} next={next} />
   <div class='giscus mx-auto max-w-(--breakpoint-lg)'></div>
   <script
     is:inline
